--- a/index.html
+++ b/index.html
@@ -73,12 +73,14 @@
                     <figcaption>
                     </figcaption>
                     <div class="eye-bar"></div>
+                <div>
                     <a class="card-info" href="https://emrebahar0912.github.io/your-tribe-profile-card">
                         <p class="card-tekst1">Emre </p>
                         <p class="card-tekst2">19</p>
                         <p class="card-tekst3">Mijn visitekaartje</p>
                         <p class="card-tekst4">Hogeschool van Amsterdam</p>
                     </a>
+                </div>
 
                     <!--https://emrebahar0912.github.io/your-tribe-profile-card/-->
                 </figure>
