Begin van welkom plek

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-
     <header>
         <nav>
             <a href="#welcome"><img src="./assets/test-logo.png" alt=""></a>
@@ -21,7 +20,6 @@
             </ul>
         </nav>
     </header>
-
     <section>
         <svg class="wave4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
@@ -32,6 +30,11 @@
          L1440,16L1440,0L0,0Z">
         </path>
         </svg>
+    </section>
+    <section class="welcome-page">
+        <img id="welcome-page-img" src="./assets/test-logo.png" alt="">
+        <h1>Welkom bij squad 1I.</h1>
+        <p>Hier vind je een overzicht van de studenten en docenten die verbonden zijn aan Squad 1i. Handig om snel te zien bij wie je terecht kunt met vragen of feedback.</p>
     </section>
     <main>
         <section>
