--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Welkom bij 1I</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -76,7 +76,7 @@
                     <img class="mugshot-after" src="./assets/mugshots/student-2-2.png" alt="">
                     <figcaption>
                     </figcaption>
-                    <div class="eye-bar"></div>
+                    <span class="eye-bar"></span>
                 <div>
                     <a class="card-info" href="https://emrebahar0912.github.io/your-tribe-profile-card">
                         <p class="card-tekst1">Emre </p>
