--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a href="#welcome"><img src="./assets/test-logo.png" alt=""></a>
+            <a href="#welcome"><img src="./assets/test-logo.png" alt="Logo van studententeam Ctrl + crew"></a>
             <ul class="navigation">
                 <li><a href="#students">Klasgenoten</a></li>
                 <li><a href="#docenten">Docenten</a></li>
@@ -32,7 +32,7 @@
         </svg>
     </section>
     <section class="welcome-page">
-        <img id="welcome-page-img" src="./assets/test-logo.png" alt="">
+        <img id="welcome-page-img" src="./assets/test-logo.png" alt="Logo van studententeam Ctrl + crew">
         <h1>Welkom bij squad 1I.</h1>
         <p>Hier vind je een overzicht van de studenten en docenten die verbonden zijn aan Squad 1i. Handig om snel te zien bij wie je terecht kunt met vragen of feedback.</p>
     </section>
@@ -505,49 +505,49 @@
         <p class="hotspots" id="locations"> Hotspots binnen het HVA</p>
         <section class="wrapper-location">
             <article class="grid-image">
-                <img class="location-image" src="./assets/aquarium.png">
+                <img class="location-image" src="./assets/aquarium.png" alt="Aquariumruimte voor studenten van FDND">
                 <article class="overlay-text">
                     <p class="tekst">Aquarium</p>
                 </article>
             </article>
             <article class="grid-image">
-                <img class="location-image" src="./assets/roomforthought.png">
+                <img class="location-image" src="./assets/roomforthought.png" alt="Room for Inspiration, creatieve ruimte voor studenten van FDND">
                 <article class="overlay-text">
                     <p class="tekst">Room for inspiration</p>
                 </article>
             </article>
             <article class="grid-image">
-                <img class="location-image" src="./assets/werkplek-bank.png">
+                <img class="location-image" src="./assets/werkplek-bank.png" alt="Presentatieruimte bij FDND">
                 <article class="overlay-text">
                     <p class="tekst">Ruimte voor presentaties</p>
                 </article>
             </article>
             <article class="grid-image">
-                <img class="location-image" src="./assets/werkplek2.png">
+                <img class="location-image" src="./assets/werkplek2.png" alt="Ruimte bij FDND om samen te werken aan projecten">
                 <article class="overlay-text">
                     <p class="tekst">Ruimte om samen te werken</p>
                 </article>
             </article>
             <article class="grid-image">
-                <img class="location-image" src="./assets/werkplek3.png">
+                <img class="location-image" src="./assets/werkplek3.png" alt="Ruimte bij FDND waar studenten in stilte kunnen werken">
                 <article class="overlay-text">
                     <p class="tekst">Rustige werkplek</p>
                 </article>
             </article>
             <article class="grid-image">
-                <img class="location-image" src="./assets/werkplekmetscherm.png">
+                <img class="location-image" src="./assets/werkplekmetscherm.png" alt="">
                 <article class="overlay-text">
                     <p class="tekst">Ruimte met extra scherm</p>
                 </article>
             </article>
             <article class="grid-image">
-                <img class="location-image" src="./assets/uitzicht.png">
+                <img class="location-image" src="./assets/uitzicht.png" alt="Ruimte met extra scherm bij FDND">
                 <article class="overlay-text">
                     <p class="tekst">Mooi uitzicht</p>
                 </article>
             </article>
             <article class="grid-image">
-                <img class="location-image" src="./assets/relaxplek.png">
+                <img class="location-image" src="./assets/relaxplek.png" alt="Gezellige buitenplek voor studenten om te ontspannen en pauze te houden">
                 <article class="overlay-text">
                     <p class="tekst">Pauze plek buiten</p>
                 </article>
@@ -573,16 +573,16 @@
             <p class="madeby">
                 Gemaakt door
             </p>
-            <img class="logo" src="./assets/test-logo.png">
+            <img class="logo" src="./assets/test-logo.png" alt="Logo van studententeam Ctrl + crew">
         </article>
         <article class="madeby 1">
-            <img class="image-footer" src="assets/roxy.png">
+            <img class="image-footer" src="assets/roxy.png" alt="Profielfoto roxy">
             <p class="roxy">
                 Roxy Fokker
             </p>
         </article>
         <article class="madeby 3">
-            <img class="image-footer" src="assets/gijs.png">
+            <img class="image-footer" src="assets/gijs.png" alt="Profielfoto Gijs">
             <p class="roxy">
                 Gijs Nagtegaal
             </p>
