h4-hidden voor toegankelijkheid

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </nav>
     </header>
     <section>
+        <h4>Wave SVG decoractie</h4>
         <svg class="wave4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
          C384,26.5,480,21.5,576,34.65
@@ -38,6 +39,7 @@
     </section>
     <main>
         <section>
+            <h4>Wave SVG decoractie</h4>
             <svg class="wave1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
                 <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
                 C384,26.5,480,21.5,576,34.65
@@ -404,6 +406,7 @@
             </section>
             <button class="meer-fotos">Meer Foto's</button>
             <section>
+                <h4>Wave SVG decoractie</h4>
                 <svg class="wave1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
                     <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
                 C384,26.5,480,21.5,576,34.65
@@ -480,6 +483,7 @@
         </article>
         <!-- Dit doet Gijs -->
         <section>
+            <h4>Wave SVG decoractie</h4>
             <svg class="wave1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
                 <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
          C384,26.5,480,21.5,576,34.65
@@ -557,6 +561,7 @@
     </main>
     <!-- Dit doet Gijs -->
     <section>
+        <h4>Wave SVG decoractie</h4>
         <svg class="wave3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
          C384,26.5,480,21.5,576,34.65
