article removed for a div

--- a/index.html
+++ b/index.html
@@ -510,9 +510,9 @@
         <section class="wrapper-location">
             <article class="grid-image">
                 <img class="location-image" src="./assets/aquarium.png" alt="Aquariumruimte voor studenten van FDND">
-                <article class="overlay-text">
+                <div class="overlay-text">
                     <p class="tekst">Aquarium</p>
-                </article>
+                </div>
             </article>
             <article class="grid-image">
                 <img class="location-image" src="./assets/roomforthought.png" alt="Room for Inspiration, creatieve ruimte voor studenten van FDND">
