--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                 <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-2.png" alt="Profielfoto van een student">
                     <img class="mugshot-after" src="./assets/mugshots/student-2-2.png" alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar"></div>
                     <figcaption>
                         <a class="card-info" href="https://emrebahar0912.github.io/your-tribe-profile-card">
                             <p class="card-tekst1">Emre </p>
@@ -90,6 +91,7 @@
                 <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-3.png" alt="Profielfoto van een student">
                     <img class="mugshot-after" src="./assets/mugshots/student-3-2.png" alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar"></div>
                     <figcaption>
                         <a class="card-info" href="https://caitlin-fdnd.github.io/your-tribe-profile-card/">
                             <p class="card-tekst1">Caitlin</p>
@@ -104,6 +106,7 @@
                 <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-4.png" alt="Profielfoto van een student">
                     <img class="mugshot-after" src="./assets/mugshots/student-4-2.png" alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar"></div>
                     <figcaption>
                         <a class="card-info" href="">
                             <p class="card-tekst1">Ayoub</p>
@@ -116,6 +119,7 @@
                 <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-5.png" alt="Profielfoto van een student">
                     <img class="mugshot-after" src="./assets/mugshots/student-5-2.png" alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar"></div>
                     <figcaption>
                         <a class="card-info" href="">
                             <p class="card-tekst1">Ilias</p>
@@ -128,6 +132,7 @@
                 <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-6.png" alt="Profielfoto van een student">
                     <img class="mugshot-after" src="./assets/mugshots/student-6-2.png" alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar"></div>
                     <figcaption>
                         <a class="card-info" href="https://isaaceswa.github.io/your-tribe-profile-card/">
                             <p class="card-tekst1">Isaac</p>
@@ -141,6 +146,7 @@
                 <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-7.png" alt="Profielfoto van een student">
                     <img class="mugshot-after" src="./assets/mugshots/student-7-2.png" alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar glasses"></div>
                     <figcaption>
                         <a class="card-info" href="https://kitkatisvibing.github.io/your-tribe-profile-card/">
                             <p class="card-tekst1">Kate</p>
@@ -154,6 +160,7 @@
                 <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-8.png" alt="Profielfoto van een student">
                     <img class="mugshot-after" src="./assets/mugshots/student-8-2.png" alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar"></div>
                     <figcaption>
                         <a class="card-info" href="https://kayleighhhhh.github.io/profile-card-kayleigh/">
                             <p class="card-tekst1">Kayleigh</p>
@@ -167,6 +174,7 @@
                 <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-9.png" alt="Profielfoto van een student">
                     <img class="mugshot-after" src="./assets/mugshots/student-9-2.png" alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar"></div>
                     <figcaption>
                         <a class="card-info" href="https://mohamedelib.github.io/your-tribe-profile-card/">
                             <p class="card-tekst1">Mohamed</p>
@@ -180,6 +188,7 @@
                 <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-10.png" alt="Profielfoto van een student">
                     <img class="mugshot-after" src="./assets/mugshots/student-10-2.png" alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar"></div>
                     <figcaption>
                         <a class="card-info" href="https://lestherluis.github.io/lesthercard/">
                             <p class="card-tekst1">Lesther</p>
@@ -193,6 +202,7 @@
                 <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-11.png" alt="Profielfoto van een student">
                     <img class="mugshot-after" src="./assets/mugshots/student-11-2.png" alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar"></div>
                     <figcaption>
                         <a class="card-info" href="">
                             <p class="card-tekst1">Khouloud</p>
@@ -205,6 +215,7 @@
                 <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-12.png" alt="Profielfoto van een student">
                     <img class="mugshot-after" src="./assets/mugshots/student-12-2.png" alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar"></div>
                     <figcaption>
                         <a class="card-info" href="https://khiettt.github.io/your-tribe-profile-card/">
                             <p class="card-tekst1">Khitam</p>
@@ -218,6 +229,7 @@
                 <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-13.png" alt="Profielfoto van een student">
                     <img class="mugshot-after" src="./assets/mugshots/student-13-2.png" alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar"></div>
                     <figcaption>
                         <a class="card-info" href="">
                             <p class="card-tekst1">Mouaad</p>
@@ -230,6 +242,7 @@
                 <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-14.png" alt="Profielfoto van een student">
                     <img class="mugshot-after" src="./assets/mugshots/student-14-2.png" alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar"></div>
                     <figcaption>
                         <a class="card-info" href="">
                             <p class="card-tekst1">Oumaima</p>
@@ -242,6 +255,7 @@
                 <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-15.png" alt="Profielfoto van een student">
                     <img class="mugshot-after" src="./assets/mugshots/student-15-2.png" alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar glasses"></div>
                     <figcaption>
                         <a class="card-info" href="https://scar055.github.io/your-tribe-profile-card/">
                             <p class="card-tekst1">Rowan</p>
@@ -255,6 +269,7 @@
                 <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-16.png" alt="Profielfoto van een student">
                     <img class="mugshot-after" src="./assets/mugshots/student-16-2.png" alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar"></div>
                     <figcaption>
                         <a class="card-info" href="https://rox-codelabs.github.io/your-tribe-profile-card/">
                             <p class="card-tekst1">Roxy</p>
@@ -268,6 +283,7 @@
                 <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-17.png" alt="Profielfoto van een student">
                     <img class="mugshot-after" src="./assets/mugshots/student-17-2.png" alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar glasses"></div>
                     <figcaption>
                         <a class="card-info" href="https://tjeerd-jw.github.io/your-tribe-profile-card/">
                             <p class="card-tekst1">Tjeerd</p>
@@ -281,6 +297,7 @@
                 <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-18.png" alt="Profielfoto van een student">
                     <img class="mugshot-after" src="./assets/mugshots/student-18-2.png" alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar glasses"></div>
                     <figcaption>
                         <a class="card-info" href="https://webtins.github.io/your-tribe-profile-card/">
                             <p class="card-tekst1">Tin</p>
@@ -294,6 +311,7 @@
                 <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-19.png" alt="Profielfoto van een student">
                     <img class="mugshot-after" src="./assets/mugshots/student-19-2.png" alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar"></div>
                     <figcaption>
                         <a class="card-info" href="https://hexterty46.github.io/your-tribe-profile-card/">
                             <p class="card-tekst1">Semih</p>
@@ -307,6 +325,7 @@
                 <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-20.png" alt="Profielfoto van een student">
                     <img class="mugshot-after" src="./assets/mugshots/student-20-2.png" alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar"></div>
                     <figcaption>
                         <a class="card-info" href="">
                             <p class="card-tekst1">Seb</p>
@@ -319,6 +338,7 @@
                 <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-21.png" alt="Profielfoto van een student">
                     <img class="mugshot-after" src="./assets/mugshots/student-21-2.png" alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar"></div>
                     <figcaption>
                         <a class="card-info" href="">
                             <p class="card-tekst1">Sivar</p>
@@ -331,6 +351,7 @@
                 <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-22.png" alt="Profielfoto van een student">
                     <img class="mugshot-after" src="./assets/mugshots/student-22-2.png" alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar"></div>
                     <figcaption>
                         <a class="card-info" href="https://svenvandijk22.github.io/your-tribe-profile-card/">
                             <p class="card-tekst1">Sven</p>
@@ -344,6 +365,7 @@
                 <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-23.png" alt="Profielfoto van een student">
                     <img class="mugshot-after" src="./assets/mugshots/student-23-2.png" alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar"></div>
                     <figcaption>
                         <a class="card-info" href="https://thomasseisveld.github.io/profilecard-Thomas/">
                             <p class="card-tekst1">Thomas</p>
@@ -357,6 +379,7 @@
                 <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-1.png" alt="Profielfoto van een student">
                     <img class="mugshot-after" src="./assets/mugshots/student-1-2.png" alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar"></div>
                     <figcaption>
                         <a class="card-info" href="https://gijscreator.github.io/your-tribe-profile-card/">
                             <p class="card-tekst1">Gijs</p>
@@ -370,6 +393,7 @@
                 <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-24.png" alt="Profielfoto van een student">
                     <img class="mugshot-after" src="./assets/mugshots/student-24-2.png" alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar angle"></div>
                     <figcaption>
                         <a class="card-info" href="https://angelaaliyah12.github.io/your-tribe-profile-card/">
                             <p class="card-tekst1">Angle</p>
@@ -411,6 +435,7 @@
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/docent-3.png" alt="Profielfoto van een docent">
                     <img class="mugshot-after" src="./assets/mugshots/docent-3-2.png" alt="Mugshot-stijl portret van een docent, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar"></div>
                     <figcaption>
                         <p>Joost</p>
                     </figcaption>
@@ -418,6 +443,7 @@
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/docent-2.png" alt="Profielfoto van een docent">
                     <img class="mugshot-after" src="./assets/mugshots/docent-2-2.png" alt="Mugshot-stijl portret van een docent, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar koop"></div>
                     <figcaption>
                         <p>Koop</p>
                         <a href="https://koopreynders.github.io/profile-card/">🔗</a>
@@ -426,6 +452,7 @@
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/docent-1.png" alt="Profielfoto van een docent">
                     <img class="mugshot-after" src="./assets/mugshots/docent-1-2.png" alt="Mugshot-stijl portret van een docent, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar"></div>
                     <figcaption>
                         <p>Suus</p>
                     </figcaption>
@@ -433,6 +460,7 @@
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/docent-4.png" alt="Profielfoto van een docent">
                     <img class="mugshot-after" src="./assets/mugshots/docent-4-2.png" alt="Mugshot-stijl portret van een docent, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar"></div>
                     <figcaption>
                         <p>Cyd</p>
                     </figcaption>
@@ -440,6 +468,7 @@
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/docent-5.png" alt="Profielfoto van een docent">
                     <img class="mugshot-after" src="./assets/mugshots/docent-5-2.png" alt="Mugshot-stijl portret van een docent, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar"></div>
                     <figcaption>
                         <p>Krijn</p>
                     </figcaption>
@@ -447,6 +476,7 @@
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/docent-6.png" alt="Profielfoto van een docent">
                     <img class="mugshot-after" src="./assets/mugshots/docent-6-2.png" alt="Mugshot-stijl portret van een docent, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
+                    <div class="eye-bar justus"></div>
                     <figcaption>
                         <p>Justus</p>
                     </figcaption>
