--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
 
 
         <section>
+            <h4>klasgenoten</h4>
             <article class="zoektekst">
-                <p>Zoek hieronder je klasgenoot op</p>
+                <h3>Zoek hieronder je klasgenoot op</h3>
                 <form>
                     <input type="search" placeholder="Zoek je Klasgenoten">
                 </form>
@@ -520,46 +521,46 @@
                 <img class="location-image" src="./assets/roomforthought.png"
                     alt="Room for Inspiration, creatieve ruimte voor studenten van FDND">
                 <article class="overlay-text">
-                    <h5 class="tekst">Room for inspiration</p>
+                    <h5 class="tekst">Room for inspiration</h5>
                 </article>
             </article>
             <article class="grid-image">
                 <img class="location-image" src="./assets/werkplek-bank.png" alt="Presentatieruimte bij FDND">
                 <article class="overlay-text">
-                    <h5 class="tekst">Ruimte voor presentaties</p>
+                    <h5 class="tekst">Ruimte voor presentaties</h5>
                 </article>
             </article>
             <article class="grid-image">
                 <img class="location-image" src="./assets/werkplek2.png"
                     alt="Ruimte bij FDND om samen te werken aan projecten">
                 <article class="overlay-text">
-                    <h5 class="tekst">Ruimte om samen te werken</p>
+                    <h5 class="tekst">Ruimte om samen te werken</h5>
                 </article>
             </article>
             <article class="grid-image">
                 <img class="location-image" src="./assets/werkplek3.png"
                     alt="Ruimte bij FDND waar studenten in stilte kunnen werken">
                 <article class="overlay-text">
-                    <h5 class="tekst">Rustige werkplek</p>
+                    <h5 class="tekst">Rustige werkplek</h5>
                 </article>
             </article>
             <article class="grid-image">
                 <img class="location-image" src="./assets/werkplekmetscherm.png" alt="">
                 <article class="overlay-text">
-                    <h5 class="tekst">Ruimte met extra scherm</p>
+                    <h5 class="tekst">Ruimte met extra scherm</h5>
                 </article>
             </article>
             <article class="grid-image">
                 <img class="location-image" src="./assets/uitzicht.png" alt="Ruimte met extra scherm bij FDND">
                 <article class="overlay-text">
-                    <h5 class="tekst">Mooi uitzicht</p>
+                    <h5 class="tekst">Mooi uitzicht</h5>
                 </article>
             </article>
             <article class="grid-image">
                 <img class="location-image" src="./assets/relaxplek.png"
                     alt="Gezellige buitenplek voor studenten om te ontspannen en pauze te houden">
                 <article class="overlay-text">
-                    <h5 class="tekst">Pauze plek buiten</p>
+                    <h5 class="tekst">Pauze plek buiten</h5>
                 </article>
             </article>
         </section>
@@ -581,22 +582,22 @@
     </section>
     <footer id="credits" class="footer-layout">
         <article class="logo-madeby">
-            <p class="madeby">
+            <h5 class="madeby">
                 Gemaakt door
-            </p>
+            </h5>
             <img class="logo" src="./assets/test-logo.png" alt="Logo van studententeam Ctrl + crew">
         </article>
         <article class="madeby 1">
             <img class="image-footer" src="assets/roxy.png" alt="Profielfoto roxy">
-            <p class="roxy">
+            <h5 class="roxy">
                 Roxy Fokker
-            </p>
+            </h5>
         </article>
         <article class="madeby 3">
             <img class="image-footer" src="assets/gijs.png" alt="Profielfoto Gijs">
-            <p class="roxy">
+            <h5 class="roxy">
                 Gijs Nagtegaal
-            </p>
+            </h5>
         </article>
 
     </footer>
