--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         <article class="mugshot-article-container">
             <h2 id="students">Alle Klasgenoten</h2>
             <section class="mugshot-image-container">
+                <h4>mugshot section</h4>
                 <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-2.png" alt="Profielfoto van een student">
                     <img class="mugshot-after" src="./assets/mugshots/student-2-2.png" alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
@@ -433,6 +434,7 @@
             </section>
             <h2 id="docenten">Docenten</h2>
             <section class="mugshot-image-container container-docenten">
+                 <h4>mugshot section van docenten</h4>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/docent-3.png" alt="Profielfoto van een docent">
                     <img class="mugshot-after" src="./assets/mugshots/docent-3-2.png" alt="Mugshot-stijl portret van een docent, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
@@ -509,8 +511,9 @@
             </svg>
         </section>
         <!-- Dit doet Gijs -->
-        <p class="hotspots" id="locations"> Hotspots binnen het HVA</p>
+        <p class="hotspots" id="locations"> Hotspots binnen de HVA</p>
         <section class="wrapper-location">
+            <h4>hotspots op de hva</h4>
             <article class="grid-image">
                 <img class="location-image" src="./assets/aquarium.png" alt="Aquariumruimte voor studenten van FDND">
                 <div class="overlay-text">
