article naar figure met figcaption

--- a/index.html
+++ b/index.html
@@ -514,58 +514,58 @@
         <p class="hotspots" id="locations"> Hotspots binnen de HVA</p>
         <section class="wrapper-location">
             <h4>hotspots op de hva</h4>
-            <article class="grid-image">
+            <figure class="grid-image">
                 <img class="location-image" src="./assets/aquarium.png" alt="Aquariumruimte voor studenten van FDND">
-                <div class="overlay-text">
+                <figcaption class="overlay-text">
                     <h5 class="tekst">Aquarium</h5>
-                </div>
-            </article>
-            <article class="grid-image">
+                </figcaption>
+            </figure>
+            <figure class="grid-image">
                 <img class="location-image" src="./assets/roomforthought.png"
                     alt="Room for Inspiration, creatieve ruimte voor studenten van FDND">
-                <article class="overlay-text">
+                <figcaption class="overlay-text">
                     <h5 class="tekst">Room for inspiration</h5>
-                </article>
-            </article>
-            <article class="grid-image">
+                </figcaption>
+            </figure>
+            <figure class="grid-image">
                 <img class="location-image" src="./assets/werkplek-bank.png" alt="Presentatieruimte bij FDND">
-                <article class="overlay-text">
+                <figcaption class="overlay-text">
                     <h5 class="tekst">Ruimte voor presentaties</h5>
-                </article>
-            </article>
-            <article class="grid-image">
+                </figcaption>
+            </figure>
+            <figure class="grid-image">
                 <img class="location-image" src="./assets/werkplek2.png"
                     alt="Ruimte bij FDND om samen te werken aan projecten">
-                <article class="overlay-text">
+                <figcaption class="overlay-text">
                     <h5 class="tekst">Ruimte om samen te werken</h5>
-                </article>
-            </article>
-            <article class="grid-image">
+                </figcaption>
+            </figure>
+            <figure class="grid-image">
                 <img class="location-image" src="./assets/werkplek3.png"
                     alt="Ruimte bij FDND waar studenten in stilte kunnen werken">
-                <article class="overlay-text">
+                <figcaption class="overlay-text">
                     <h5 class="tekst">Rustige werkplek</h5>
-                </article>
-            </article>
-            <article class="grid-image">
+                </figcaption>
+            </figure>
+            <figure class="grid-image">
                 <img class="location-image" src="./assets/werkplekmetscherm.png" alt="">
-                <article class="overlay-text">
+                <figcaption class="overlay-text">
                     <h5 class="tekst">Ruimte met extra scherm</h5>
-                </article>
-            </article>
-            <article class="grid-image">
+                </figcaption>
+            </figure>
+            <figure class="grid-image">
                 <img class="location-image" src="./assets/uitzicht.png" alt="Ruimte met extra scherm bij FDND">
-                <article class="overlay-text">
+                <figcaption class="overlay-text">
                     <h5 class="tekst">Mooi uitzicht</h5>
-                </article>
-            </article>
-            <article class="grid-image">
+                </figcaption>
+            </figure>
+            <figure class="grid-image">
                 <img class="location-image" src="./assets/relaxplek.png"
                     alt="Gezellige buitenplek voor studenten om te ontspannen en pauze te houden">
-                <article class="overlay-text">
+                <figcaption class="overlay-text">
                     <h5 class="tekst">Pauze plek buiten</h5>
-                </article>
-            </article>
+                </figcaption>
+            </figure>
         </section>
         <!-- Dit doet Gijs -->
     </main>
