--- a/index.html
+++ b/index.html
@@ -591,13 +591,13 @@
             <img class="logo" src="./assets/test-logo.png" alt="Logo van studententeam Ctrl + crew">
         </article>
         <article class="madeby 1">
-            <img class="image-footer" src="assets/roxy.png" alt="Profielfoto roxy">
+            <img class="image-footer" src="./assets/roxy.png" alt="Profielfoto roxy">
             <h5 class="roxy">
                 Roxy Fokker
             </h5>
         </article>
         <article class="madeby 3">
-            <img class="image-footer" src="assets/gijs.png" alt="Profielfoto Gijs">
+            <img class="image-footer" src="./assets/gijs.png" alt="Profielfoto Gijs">
             <h5 class="roxy">
                 Gijs Nagtegaal
             </h5>
