smaller size header tekst mobile

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <nav>
             <a href="#welcome"><img src="./assets/test-logo.png" alt="Logo van studententeam Ctrl + crew"></a>
             <ul class="navigation">
-                <li><a href="#students">Klasgenoten</a></li>
-                <li><a href="#docenten">Docenten</a></li>
-                <li><a href="#locations">Locaties</a></li>
-                <li><a href="#credits">Credits</a></li>
+                <li><a class="navtekst" href="#students">Klasgenoten</a></li>
+                <li><a class="navtekst" href="#docenten">Docenten</a></li>
+                <li><a class="navtekst" href="#locations">Locaties</a></li>
+                <li><a class="navtekst" href="#credits">Credits</a></li>
             </ul>
         </nav>
     </header>
