--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     </section>
     <main>
         <section>
+            <p class="gekketekst">Cabinet de communicants</p>
+        </section>
+        <section>
             <h4>klasgenoten</h4>
             <article class="zoektekst">
                 <h3>Zoek hieronder je klasgenoot op</h3>
