--- a/index.html
+++ b/index.html
@@ -35,6 +35,36 @@
     
     <main>
         <section>
+            <article>
+                <h1 class="welkomtekst">
+                    Welkom bij squad 1i
+                </h5>
+            </article>
+        </section>
+        <section>
+            <h4>Wave SVG decoractie</h4>
+            <svg class="wave1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
+         C384,26.5,480,21.5,576,34.65
+         C672,48,768,80,864,98.65
+         C960,117.5,1056,122.5,1152,106.65
+         C1248,90.5,1344,53.5,1392,34.65
+         L1440,16L1440,160L0,160Z">
+                </path>
+
+            </svg>
+            <svg class="wave2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
+         C384,26.5,480,21.5,576,34.65
+         C672,48,768,80,864,98.65
+         C960,117.5,1056,122.5,1152,106.65
+         C1248,90.5,1344,53.5,1392,34.65
+         L1440,16L1440,0L0,0Z">
+                </path>
+
+            </svg>
+        </section>
+        <section>
             <h4>klasgenoten</h4>
             <article class="zoektekst">
                 <h3>Zoek hieronder je klasgenoot op</h3>
