--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </ul>
         </nav>
     </header>
-    <section>
+    <section class="waveheader">
         <svg class="wave4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
          C384,26.5,480,21.5,576,34.65
