#22333B as main color instead of black

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <section>
             <h4>klasgenoten</h4>
             <article class="zoektekst">
-                <h3>Zoek hieronder je klasgenoot op</h3>
+                <h3 class="zoeken">Zoek hieronder je klasgenoot op</h3>
                 <form class="search-box">
                     <input type="search" placeholder="Zoek jouw Klasgenoten...">
                     <img src="assets/icon-2.svg" alt="Search" class="search-icon">
@@ -458,7 +458,7 @@
 
                 </svg>
             </section>
-            <h2 id="docenten">Docenten</h2>
+            <h2 class="zoeken" id="docenten">Docenten</h2>
             <section class="mugshot-image-container container-docenten">
                 <h4>mugshot section van docenten</h4>
                 <figure class="mugshot">
@@ -543,7 +543,7 @@
             </svg>
         </section>
         <!-- Dit doet Gijs -->
-        <p class="hotspots" id="locations"> Hotspots binnen de HVA</p>
+        <p class="hotspots zoeken" id="locations"> Hotspots binnen de HVA</p>
         <section class="wrapper-location">
             <h4>hotspots op de hva</h4>
             <figure class="grid-image">
