target="_blank" added to images

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
                     <div class="eye-bar"></div>
                     <figcaption>
-                        <a class="card-info" href="https://caitlin-fdnd.github.io/your-tribe-profile-card/">
+                        <a class="card-info" href="https://caitlin-fdnd.github.io/your-tribe-profile-card/" target="_blank">
                             <p class="card-tekst1">Caitlin</p>
                             <p class="card-tekst2">00</p>
                             <p class="card-tekst3">Mijn visitekaartje</p>
@@ -129,7 +129,7 @@
                         alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
                     <div class="eye-bar"></div>
                     <figcaption>
-                        <a class="card-info" href="">
+                        <a class="card-info" href="" target="_blank">
                             <p class="card-tekst1">Ilias</p>
                             <p class="card-tekst2">00</p>
                             <p class="card-tekst3">Mijn visitekaartje</p>
@@ -143,7 +143,7 @@
                         alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
                     <div class="eye-bar"></div>
                     <figcaption>
-                        <a class="card-info" href="https://isaaceswa.github.io/your-tribe-profile-card/">
+                        <a class="card-info" href="https://isaaceswa.github.io/your-tribe-profile-card/" target="_blank">
                             <p class="card-tekst1">Isaac</p>
                             <p class="card-tekst2">00</p>
                             <p class="card-tekst3">Mijn visitekaartje</p>
@@ -158,7 +158,7 @@
                         alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
                     <div class="eye-bar glasses"></div>
                     <figcaption>
-                        <a class="card-info" href="https://kitkatisvibing.github.io/your-tribe-profile-card/">
+                        <a class="card-info" href="https://kitkatisvibing.github.io/your-tribe-profile-card/" target="_blank">
                             <p class="card-tekst1">Kate</p>
                             <p class="card-tekst2">18</p>
                             <p class="card-tekst3">Mijn visitekaartje</p>
@@ -173,7 +173,7 @@
                         alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
                     <div class="eye-bar"></div>
                     <figcaption>
-                        <a class="card-info" href="https://kayleighhhhh.github.io/profile-card-kayleigh/">
+                        <a class="card-info" href="https://kayleighhhhh.github.io/profile-card-kayleigh/" target="_blank">
                             <p class="card-tekst1">Kayleigh</p>
                             <p class="card-tekst2">00</p>
                             <p class="card-tekst3">Mijn visitekaartje</p>
@@ -188,7 +188,7 @@
                         alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
                     <div class="eye-bar"></div>
                     <figcaption>
-                        <a class="card-info" href="https://mohamedelib.github.io/your-tribe-profile-card/">
+                        <a class="card-info" href="https://mohamedelib.github.io/your-tribe-profile-card/" target="_blank">
                             <p class="card-tekst1">Mohamed</p>
                             <p class="card-tekst2">20</p>
                             <p class="card-tekst3">Mijn visitekaartje</p>
@@ -203,7 +203,7 @@
                         alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
                     <div class="eye-bar"></div>
                     <figcaption>
-                        <a class="card-info" href="https://lestherluis.github.io/lesthercard/">
+                        <a class="card-info" href="https://lestherluis.github.io/lesthercard/" target="_blank">
                             <p class="card-tekst1">Lesther</p>
                             <p class="card-tekst2">00</p>
                             <p class="card-tekst3">Mijn visitekaartje</p>
@@ -242,7 +242,7 @@
                     <!--https://khiettt.github.io/your-tribe-profile-card/-->
                 </figure>
                 <figure class="mugshot student">
-                    <img class="mugshot-first" src="./assets/mugshots/student-13.png" alt="Profielfoto van een student">
+                    <img class="mugshot-first" src="./assets/mugshots/student-13.png" alt="Profielfoto van een student" target="_blank">
                     <img class="mugshot-after" src="./assets/mugshots/student-13-2.png"
                         alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
                     <div class="eye-bar"></div>
@@ -275,7 +275,7 @@
                         alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
                     <div class="eye-bar glasses"></div>
                     <figcaption>
-                        <a class="card-info" href="https://scar055.github.io/your-tribe-profile-card/">
+                        <a class="card-info" href="https://scar055.github.io/your-tribe-profile-card/" target="_blank">
                             <p class="card-tekst1">Rowan</p>
                             <p class="card-tekst2">00</p>
                             <p class="card-tekst3">Mijn visitekaartje</p>
@@ -290,7 +290,7 @@
                         alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
                     <div class="eye-bar"></div>
                     <figcaption>
-                        <a class="card-info" href="https://rox-codelabs.github.io/your-tribe-profile-card/">
+                        <a class="card-info" href="https://rox-codelabs.github.io/your-tribe-profile-card/" target="_blank">
                             <p class="card-tekst1">Roxy</p>
                             <p class="card-tekst2">25</p>
                             <p class="card-tekst3">Mijn visitekaartje</p>
@@ -305,7 +305,7 @@
                         alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
                     <div class="eye-bar glasses"></div>
                     <figcaption>
-                        <a class="card-info" href="https://tjeerd-jw.github.io/your-tribe-profile-card/">
+                        <a class="card-info" href="https://tjeerd-jw.github.io/your-tribe-profile-card/" target="_blank">
                             <p class="card-tekst1">Tjeerd</p>
                             <p class="card-tekst2">00</p>
                             <p class="card-tekst3">Mijn visitekaartje</p>
@@ -320,7 +320,7 @@
                         alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
                     <div class="eye-bar glasses"></div>
                     <figcaption>
-                        <a class="card-info" href="https://webtins.github.io/your-tribe-profile-card/">
+                        <a class="card-info" href="https://webtins.github.io/your-tribe-profile-card/" target="_blank">
                             <p class="card-tekst1">Tin</p>
                             <p class="card-tekst2">21</p>
                             <p class="card-tekst3">Mijn visitekaartje</p>
@@ -335,7 +335,7 @@
                         alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
                     <div class="eye-bar"></div>
                     <figcaption>
-                        <a class="card-info" href="https://hexterty46.github.io/your-tribe-profile-card/">
+                        <a class="card-info" href="https://hexterty46.github.io/your-tribe-profile-card/" target="_blank">
                             <p class="card-tekst1">Semih</p>
                             <p class="card-tekst2">19</p>
                             <p class="card-tekst3">Mijn visitekaartje</p>
@@ -345,12 +345,12 @@
                     <!--https://hexterty46.github.io/your-tribe-profile-card/-->
                 </figure>
                 <figure class="mugshot student">
-                    <img class="mugshot-first" src="./assets/mugshots/student-20.png" alt="Profielfoto van een student">
+                    <img class="mugshot-first" src="./assets/mugshots/student-20.png" alt="Profielfoto van een student" >
                     <img class="mugshot-after" src="./assets/mugshots/student-20-2.png"
                         alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
                     <div class="eye-bar"></div>
                     <figcaption>
-                        <a class="card-info" href="">
+                        <a class="card-info" href="" target="_blank">
                             <p class="card-tekst1">Seb</p>
                             <p class="card-tekst2">00</p>
                             <p class="card-tekst3">Mijn visitekaartje</p>
@@ -364,7 +364,7 @@
                         alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
                     <div class="eye-bar"></div>
                     <figcaption>
-                        <a class="card-info" href="">
+                        <a class="card-info" href="" target="_blank">
                             <p class="card-tekst1">Sivar</p>
                             <p class="card-tekst2">00</p>
                             <p class="card-tekst3">Mijn visitekaartje</p>
@@ -378,7 +378,7 @@
                         alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
                     <div class="eye-bar"></div>
                     <figcaption>
-                        <a class="card-info" href="https://svenvandijk22.github.io/your-tribe-profile-card/">
+                        <a class="card-info" href="https://svenvandijk22.github.io/your-tribe-profile-card/" target="_blank">
                             <p class="card-tekst1">Sven</p>
                             <p class="card-tekst2">22</p>
                             <p class="card-tekst3">Mijn visitekaartje</p>
@@ -393,7 +393,7 @@
                         alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
                     <div class="eye-bar"></div>
                     <figcaption>
-                        <a class="card-info" href="https://thomasseisveld.github.io/profilecard-Thomas/">
+                        <a class="card-info" href="https://thomasseisveld.github.io/profilecard-Thomas/" target="_blank">
                             <p class="card-tekst1">Thomas</p>
                             <p class="card-tekst2">19</p>
                             <p class="card-tekst3">Mijn visitekaartje</p>
@@ -408,7 +408,7 @@
                         alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
                     <div class="eye-bar"></div>
                     <figcaption>
-                        <a class="card-info" href="https://gijscreator.github.io/your-tribe-profile-card/">
+                        <a class="card-info" href="https://gijscreator.github.io/your-tribe-profile-card/" target="_blank">
                             <p class="card-tekst1">Gijs</p>
                             <p class="card-tekst2">19</p>
                             <p class="card-tekst3">Mijn visitekaartje</p>
@@ -423,7 +423,7 @@
                         alt="Mugshot-stijl portret van een student, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
                     <div class="eye-bar angle"></div>
                     <figcaption>
-                        <a class="card-info" href="https://angelaaliyah12.github.io/your-tribe-profile-card/">
+                        <a class="card-info" href="https://angelaaliyah12.github.io/your-tribe-profile-card/" target="_blank">
                             <p class="card-tekst1">Angle</p>
                             <p class="card-tekst2">00</p>
                             <p class="card-tekst3">Mijn visitekaartje</p>
