card info always visible on mobile

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                         alt="Mugshot-stijl portret van een docent, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
                     <div class="eye-bar"></div>
                     <figcaption>
-                        <p>Joost</p>
+                        <p class="hidden">Joost</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
@@ -476,7 +476,7 @@
                         alt="Mugshot-stijl portret van een docent, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
                     <div class="eye-bar koop"></div>
                     <figcaption>
-                        <p>Koop</p>
+                        <p class="hidden">Koop</p>
                         <a href="https://koopreynders.github.io/profile-card/">🔗</a>
                     </figcaption>
                 </figure>
@@ -486,7 +486,7 @@
                         alt="Mugshot-stijl portret van een docent, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
                     <div class="eye-bar"></div>
                     <figcaption>
-                        <p>Suus</p>
+                        <p class="hidden">Suus</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
@@ -495,7 +495,7 @@
                         alt="Mugshot-stijl portret van een docent, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
                     <div class="eye-bar"></div>
                     <figcaption>
-                        <p>Cyd</p>
+                        <p class="hidden">Cyd</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
@@ -504,7 +504,7 @@
                         alt="Mugshot-stijl portret van een docent, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
                     <div class="eye-bar"></div>
                     <figcaption>
-                        <p>Krijn</p>
+                        <p class="hidden">Krijn</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
@@ -513,7 +513,7 @@
                         alt="Mugshot-stijl portret van een docent, met lengte-lijnen op de achtergrond en een zwart balkje over de ogen">
                     <div class="eye-bar justus"></div>
                     <figcaption>
-                        <p>Justus</p>
+                        <p class="hidden">Justus</p>
                     </figcaption>
                 </figure>
             </section>
